--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -8,8 +8,8 @@
   line-height: 1.75;
 }
 
-.text-primary-grey {
-  color: $primary-grey !important;
+.text-primary{
+  color: $primary !important;
 }
 
 .hover-underline {
