--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,243 +1,60 @@
-.banner
-{
-  padding: 50px 0 34px;
-  margin-top: 72px;
-  background:linear-gradient(180deg, #FFF 0%, #F0F3FF 100%);
-  .content-banner
-  {
-    position: relative;
-    &::after{
-      content: '';
-      background-image:  url('../images/bg-banner-top.png');
-      background-position: center;
-      background-size: contain;
-      background-repeat: no-repeat;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: -20px;
-      top: 0;
-      display: none;
-      z-index: 0;
-      @include minWidth(480px) {
-        display: block;
-      }
+main{
+    section{
+        margin-top: 119px;
     }
-    @include minWidth(768px) {
-      height: 37vh;
-    }
-    @include minWidth(992px) {
-      height: 63.8vh;
-    }
+}
+.banner-top{
+    margin-top: 0;
+}
+.introduce{
     .text{
-      @include minWidth(768px) {
-        width: 53%;
-      }
-    }
-    .image{
-      z-index: 1;
-      @include minWidth(768px) {
-        width: 47%;
-      }
-      img{
-        max-width: 20rem;
-        @include minWidth(768px) {
-          max-height: 80vh;
-          max-width: 100%;
+        .heading{
+            font-family: 'Carattere', cursive;
+            font-size: 48px; 
+            color: #A4A4A4;
+            font-weight: 400; 
+            line-height: 23px;
+            margin-bottom: 22px;
         }
-      }
-    }
-  }
-  h1
-  {
-    color: $main-02;
-    span
-    {
-      display: block;
-      font-weight: 700;
-      color: $main-04;
-    }
-  }
-}
-.feature
-{
-  .box-feature
-  {
-    .item
-    {
-      cursor: pointer;
-      overflow: hidden;
-      .content-item
-      {
-        display: block;
-        padding: 50px 30px;
-        transition: all 0.3s;
-        @include minWidth(768px) {
-          padding: 50px 70px;
+        h2{
+            color: $primary;
         }
-        @include minWidth(992px) {
-          padding: 64px 110px;
-        }
-        &:hover
-        {
-          color: $main-01;
-          transform: scale(1.1);
-        }
-      }
-      @include minWidth(768px) {
-        width: 50%;
-      }
-      text-align: center;
-      &.blue
-      {
-        background-color: $main-04;
-        h4{
-          color: $light;
-        }
-        .icons
-        {
-          svg
-          {
-            path
-            {
-              fill: $light;
+        p{
+            color: #525252;
+            font-weight: 300; 
+            line-height: 1.75;
+            &:not(:last-child){
+                margin-right: 30px;
             }
-          }
         }
-        .content-item
-        {
-          &:hover
-          {
-            h4
-            {
-              color: $light;
+        .box-description{
+            border-left: 2px solid $green-1;
+            padding-left: 27px;
+            padding-top: 33px;
+            .description{
+                margin-bottom: 39px;
             }
-          }
         }
-      }
-      .icons
-      {
-        margin-top: -16%;
-        @include minWidth(992px) {
-          margin-top: -11%;
-        }
-        h4{
-          font-size: 1.6rem;
-          font-style: normal;
-          font-weight: 700;
-          line-height: 120%;
-          margin-right: 8px;
-          @include minWidth(992px) {
-            font-size: 2rem;
-          }
-        }
-        svg
-        {
-          margin-top: 10px;
-          path
-          {
-            fill: $main-04;
-          }
-        }
-      }
     }
-  }
 }
-.icon-b
-{
-  background: #fff;
-  z-index: 999;
-  display: inline-flex;
-  border-radius: 26px;
-  width: 6.9rem;
-  height: 6.9rem;
-  justify-content: center;
-  box-shadow: 0px 17.583892822265625px 35.16778564453125px 0px rgba(0, 52, 110, 0.10);
-  margin-bottom: 1rem;
-  @include minWidth(992px) {
-    width: 8.25rem;
-    height: 8.25rem;
-  }
-  img
-  {
-    max-width: 3.8rem;
-    object-fit: contain;
-    @include minWidth(992px) {
-      max-width: 5rem;
+.product-hataco{
+    .heading-hataco{
+        margin-bottom: 12px;
     }
-  }
 }
-.feature-option-2
-{
-  .item
-  {
-    width: 100%;
-    border-radius: 24px; 
-    padding: 24px;
-    overflow: hidden;
-    margin-bottom: 2rem;
-    cursor: pointer;
-    @include minWidth(768px) {
-      width: 48%;
-      margin-bottom: 0;
+.product-hataco-slider{
+    .swiper-wrapper{
+        align-items: center;
     }
-    .content-item
-    {
-      transition: all 0.3s;
-    }
-    &:hover{
-      .content-item
-      {
-        transform: scale(1.05);
-      }
-    }
-    &.blue{
-      background-color: $primary;
-      h4{
-        color: $light;
-      }
-    }
-    h4{
-      font-weight: 700; 
-    }
-    &.light
-    {
-      box-shadow: 0px 4px 24px 0px rgba(93, 118, 168, 0.08);
-      background-color: $light;
-      svg
-      {
-        path{
-          fill: $primary;
+    .swiper-slide{
+        &.swiper-slide-next{
+            .img{
+                height: 210px;
+                transform: scale(1.1);
+                img{
+                    object-fit: contain;
+                }
+            }
         }
-      }
     }
-    .image
-    {
-      width: 38%;
-    }
-    .text
-    {
-      width: 62%;
-      padding-left: 1rem;
-      @include minWidth(1200px) {
-        padding-left: 2.938rem;
-      }
-      svg
-      {
-        width: 2.5rem;
-        height: 2.5rem;
-      }
-    }
-  }
-}
-.content-footer-option-2
-{
-  .text-box
-  {
-    margin-bottom: 1.8rem;
-    @include minWidth(768px) {
-      padding-right: 5rem;
-      margin-bottom: 0;
-    }
-  }
 }
