--- a/assets/scss/_step.scss
+++ b/assets/scss/_step.scss
@@ -81,14 +81,13 @@ $stepCountHeight: 32px;
     left: 100% !important;
     transform: translate(-50%, -50%);
   }
-  color: $secondary;
   background-color: $light;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 32px;
   height: 32px;
-  border: 1px solid $border-color;
+  border: 1px solid $primary;
   border-radius: 50%;
   font-size: 16px;
 }
