--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,6 +1,4 @@
-@import url('<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kaisei+Decol:wght@400;500;700&family=Sawarabi+Gothic&display=swap" rel="stylesheet">');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Carattere&display=swap');
 @import './variable';
 @import './mixin';
 
@@ -14,7 +12,7 @@
 @import './color';
 @import './button';
 @import './text';
-@import './input';
+@import './input';      
 @import './link';
 @import './flex';
 @import './grid';
@@ -25,4 +23,3 @@
 @import './slick';
 @import './step';
 @import './home';
-@import './about-us';
