--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -41,6 +41,12 @@ main{
     .heading-hataco{
         margin-bottom: 12px;
     }
+    .swiper-button-prev{
+        top: 37%;
+    }
+    .swiper-button-next{
+        top: 37%;
+    }
 }
 .product-hataco-slider{
     .swiper-wrapper{
@@ -48,13 +54,351 @@ main{
     }
     .swiper-slide{
         &.swiper-slide-next{
+            .box-img{
+                height: 230px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
             .img{
-                height: 210px;
                 transform: scale(1.1);
+                position: relative;
+                border-radius: 25px;
+                height: max-content;
                 img{
                     object-fit: contain;
                 }
+                &::before{
+                    content: '';
+                    position: absolute;
+                    top: 0; right: 0; bottom: 0; left: 0;
+                    z-index: -1;
+                    margin: -5px; /* !importanté */
+                    border-radius: inherit; /* !importanté */
+                    background: linear-gradient(to right, #5B9E47, #D2EAB0);
+                }
             }
+            h4{
+                padding-top: 0;
+            }
+        }
+        h4{
+            padding-top: 15px;
+            color: $primary;
+            font-size: 1rem;
+            text-align: center;
+            font-weight: 600;
+            line-height: 27px;
+            text-transform: uppercase; 
+            max-width: 101px;
+            margin: 0 auto
+        }
+    }
+    
+}
+.list-product-best-seller{
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    column-gap:30px;
+}
+.item-best-seller{
+    margin-top: 30px;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.07);
+    .info{
+        padding: 21px 32px 32px;
+        text-align: center;
+        h4{
+            color: #333;
+            max-width: 238px;
+            text-align: center;
+            font-size: 17px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27px;
+            letter-spacing: -0.51px; 
+            margin-bottom: 0;
+        }
+        .price{
+            justify-content: space-between;
+            margin-bottom: 11px;
+            .sale{
+                color: #F54343;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 34px;
+            }
+            .cost{
+                color: #A4A4A4;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 34px;
+                &.cost-s{
+                    text-decoration-line: line-through; 
+                }
+            }
+        }
+        .btn-linear-rounded{
+            color: $light;
+            padding: 6px 18px;
+        }
+    }
+}
+.product-category-h{
+    .slider-thumb{
+        position: relative;
+        margin-bottom: 38px;
+        .slider-tab-p{
+            border-radius: 50px; 
+            border: 1px solid #D1D1D1; 
+            padding: 8px;
+            .swiper-slide{
+                .item-tab{
+                    padding: 6px 0;
+                    text-align: center;
+                    border-right: 1px solid #D9D9D9;
+                }
+                &.swiper-slide-active{
+                    .item-tab{
+                        color: $light;
+                        border-radius: 50px;
+                        background: linear-gradient(71deg, #0D6C42 0%, #8DC540 100%);
+                    }
+                }
+            }
+            &::after{
+                content: '';
+                height: 100%;
+                background-color: #fff;
+                position: absolute;
+                right: 0px;
+                width: 10px;
+                top: 0;
+                z-index: 9;
+            }
+        }
+        .swiper-button-prev,
+        .swiper-button-next{
+            background-color: transparent;
+            height: 21px;
+            box-shadow: none;
+            top: 50%;
+            transform: translateY(10px);
+        }
+    }
+    .slider-main-p{
+        position: relative;
+        .swiper-button-prev,
+        .swiper-button-next{
+            box-shadow: none;
+        }
+    }
+    .slider-product-p {
+        padding: 6px;
+        position: relative;
+        .item-best-seller{
+            margin-top: 0;
+        }        
+    }
+}
+.why-choose-me{
+    .content-why-choose-me{
+        .intro{
+            flex: 2;
+            padding-right: 85px;
+            position: relative;
+            max-width: 510px;
+            h2{
+                color: #0D6C42;
+                font-size: 35px;
+                font-weight: 500;
+                line-height: 55px;
+                margin-bottom: 10px;
+                strong{
+                    font-size: 45px; 
+                }
+            }
+            p{
+                color: #505050;
+                text-align: justify;
+                font-size: 15px;
+                font-weight: 400;
+                line-height: 27px;
+                max-width: 425px;
+            }
+            &::after{
+                content: url("/assets/images/line-1.png");
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+        }
+        .f-1{
+            position: relative;
+            padding-right: 60px;
+            &::after{
+                content: url("/assets/images/line-2.png");
+                position: absolute;
+                right: 0;
+                bottom: 0;
+            }
+        }
+        .feature{
+            flex: 1;
+            padding-left: 60px;
+            .title{
+                margin-bottom: 14px;
+                h5{
+                    margin-left: 14px;
+                    color: #0D6C42;
+                    font-size: 24px;
+                    font-weight: 600;
+                    line-height: 29px
+                }
+            }
+            p{
+                color: #3A3A3A;
+                text-align: justify;
+                font-size: 17px;
+                font-weight: 400;
+                line-height: 29px;
+            }
+        }
+    }
+}
+.review-customer{
+    background-image: url(/assets/images/bg-review.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-top: 124px;
+    padding-bottom: 124px;
+    .heading-hataco{
+        color: $light;
+        margin-bottom: 25px;
+        p{
+            color: $light;
+        }
+    }
+    .box-slide{
+        .swiper-pagination-bullet{
+            margin-top: 25px;
+        }
+    }
+}
+.item-review-customer{
+    border-radius: 20px;
+    background: #FFF; 
+    position: relative;
+    text-align: center;
+    padding: 37px;
+    .img{
+        width: 102px;
+        height: 102px;
+        margin: 0 auto 18px;
+    }
+    .icon{
+        width: 54px;
+        height: 40px;
+        margin: 0 auto 18px;
+    }
+    .address{
+        margin: 0 auto 18px;
+    }
+    .des{
+        color: #464646;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 27px;
+    }
+    &::after{
+        border: 1px dashed #8DC540;
+        content: '';
+        width: 96%;
+        height: 98%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        border-radius: 20px;
+    }
+}
+.blog-news{
+    margin-bottom: 119px;
+    .blog-content{
+        display: flex;
+        .box-slider{
+            width: 69.5%;
+            padding-right: 31px;
+        }
+        .blog-list{
+            width: 310.5;
+        }
+    }
+    .slider-blog-news{
+        padding: 6px;
+    }
+}
+.item-blog-new{
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
+    .box-text{
+        padding: 30px;
+        h3{
+            color: #403F46;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 27px;
+        }
+        .post-meta{
+            color: #898989;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 25px;
+            text-transform: lowercase; 
+        }
+        p{
+            color: #636363;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 24px;
+            text-transform: lowercase;
+            margin-bottom: 8px; 
+        }
+    }
+}
+.item-blog-list{
+    display: flex;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
+    margin-bottom: 24px;
+    .box-image{
+        width: 41%;
+        img{
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .box-text{
+        width: 59%;
+        padding: 24px 24px 12px;
+        h3{
+            color: #403F46;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 27px;
+        }
+        .post-meta{
+            color: #898989;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 25px;
+            text-transform: lowercase; 
         }
     }
 }
