--- a/assets/scss/_menu-footer.scss
+++ b/assets/scss/_menu-footer.scss
@@ -55,9 +55,30 @@
 }
 .footer-middle{
   padding-top: 58px;
+  padding-bottom: 54px;
+  a{
+    &:hover{
+      color: $primary;
+    }
+  }
   .info-company-ft{
     .logo{
       margin-bottom: 24px;
+    }
+    .list-info{
+      li{
+        display: flex;
+        align-items: center;
+        color: #404040;
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 35px;
+        .icon{
+          margin-right: 7px;
+          display: flex;
+          align-items: center;
+        }
+      }
     }
     .info{
       h5{
@@ -79,9 +100,55 @@
       }
     }
   }
+  .title-ft{
+    margin-bottom: 12px;
+    h4{
+      color: #333;
+      font-size: 20px;
+      font-weight: 400;
+      text-transform: uppercase; 
+    }
+    .line{
+      background-color: #CFCFCF;
+      height: 1px;
+      position: relative;
+      &::after{
+        content: '';
+        background-color: #8DC540;
+        height: 1px;
+        width: 70%;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+    }
+  }
+  .menu-ft{
+    list-style-type: circle;
+    li{
+      color: #8DC540;
+      font-size: 15px;
+      font-weight: 300;
+      line-height: 40px;
+      list-style-type: disc;
+      list-style-position: inside;
+    }
+  }
   .maps{
     iframe{
       border-radius: 20px;
+      width: 100%;
+      height: 270px;
     }
+  }
+}
+.footer-bottom{
+  padding: 27px 0;
+  border-top: 1px solid #DFDFDF;
+  .text{
+    color: #868686;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 30px;
   }
 }
