--- a/assets/scss/_menu-aside.scss
+++ b/assets/scss/_menu-aside.scss
@@ -5,7 +5,7 @@
   width: 90%;
   max-width: 100%;
   height: calc(100vh);
-  background-color: $gray-03;
+  background-color: $primary;
   padding-top: 50px;
   z-index: 1050;
   @include trans;
