--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,20 +1,35 @@
 main{
     section{
-        margin-top: 119px;
+        margin-top: 41px;
+        @include minWidth(768px){
+            margin-top: 119px;
+        }
     }
 }
 .banner-top{
     margin-top: 0;
+    .img-mobile{
+        height: 346px; 
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
 .introduce{
     .text{
         .heading{
             font-family: 'Carattere', cursive;
-            font-size: 48px; 
+            font-size: 40px; 
             color: #A4A4A4;
             font-weight: 400; 
             line-height: 23px;
-            margin-bottom: 22px;
+            margin-bottom: 18px;
+            @include minWidth(768px){
+                font-size: 48px; 
+                margin-bottom: 22px;
+            }
         }
         h2{
             color: $primary;
@@ -29,11 +44,32 @@ main{
         }
         .box-description{
             border-left: 2px solid $green-1;
-            padding-left: 27px;
-            padding-top: 33px;
-            .description{
-                margin-bottom: 39px;
+            padding-left: 16px;
+            padding-top: 13px;
+            padding-bottom: 13px;
+            margin-bottom: 20px;
+            @include minWidth(768px){
+                padding-left: 27px;
+                padding-top: 33px;
+                margin-bottom: 0;
             }
+            .description{
+                margin-bottom: 0px;
+                p{
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
+                }
+                @include minWidth(768px){
+                    margin-bottom: 39px;
+                }
+            }
+        }
+    }
+    .img{
+        margin-bottom: 20px;
+        @include minWidth(768px){
+            margin-bottom: 0px;
         }
     }
 }
@@ -57,10 +93,13 @@ main{
     .swiper-slide{
         &.swiper-slide-next{
             .box-img{
-                height: 230px;
+                height: 190px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                @include minWidth(768px){
+                    height: 230px;
+                }
             }
             .img{
                 transform: scale(1.1);
@@ -100,19 +139,41 @@ main{
 }
 .list-product-best-seller{
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    column-gap:30px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap:10px;
+    margin-bottom: 22px;
+    @include minWidth(768px){
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        column-gap:30px;
+        margin-bottom: 0;
+    }
 }
 .list-item-product-t{
     display: grid;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     column-gap:30px;
+    @include minWidth(768px){
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        column-gap:30px;
+    }
+    .item-best-seller{
+        &:nth-child(n+4){
+            display: none;
+            @include minWidth(768px){
+                display: block;
+            }
+            
+        }
+    }
 }
 .item-best-seller{
-    margin-top: 30px;
+    margin-top: 10px;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.07);
+    @include minWidth(768px){
+        margin-top: 30px;
+    }
     .info{
         padding: 21px 32px 32px;
         text-align: center;
@@ -120,27 +181,38 @@ main{
             color: #333;
             max-width: 238px;
             text-align: center;
-            font-size: 17px;
+            font-size: 15px;
             font-style: normal;
             font-weight: 400;
-            line-height: 27px;
+            line-height: 24px;
             letter-spacing: -0.51px; 
             margin-bottom: 0;
+            @include minWidth(768px){
+                font-size: 17px;
+                line-height: 27px;
+            }
         }
         .price{
             justify-content: space-between;
             margin-bottom: 11px;
             .sale{
                 color: #F54343;
-                font-size: 18px;
+                font-size: 16px;
                 font-weight: 600;
                 line-height: 34px;
+                @include minWidth(768px){
+                    font-size: 18px;
+                }
             }
             .cost{
                 color: #A4A4A4;
-                font-size: 14px;
+                font-size: 13px;
                 font-weight: 400;
                 line-height: 34px;
+                @include minWidth(768px){
+                    font-size: 14px;
+
+                }
                 &.cost-s{
                     text-decoration-line: line-through; 
                 }
@@ -284,14 +356,14 @@ main{
     padding-bottom: 124px;
     .heading-hataco{
         color: $light;
-        margin-bottom: 25px;
+        margin-bottom: 35px;
         p{
             color: $light;
         }
     }
     .box-slide{
         .swiper-pagination-bullet{
-            margin-top: 25px;
+            margin-top: 35px;
         }
     }
 }
@@ -315,6 +387,7 @@ main{
         margin: 0 auto 18px;
     }
     .des{
+        font-family: 'SVN-Gilroy', sans-serif;
         color: #464646;
         text-align: center;
         font-size: 16px;
@@ -412,6 +485,41 @@ main{
             font-weight: 400;
             line-height: 25px;
             text-transform: lowercase; 
+        }
+    }
+}
+.video-hataco{
+    .heading-hataco{
+        margin-bottom: 16px;
+    }
+}
+.content-video-hataco{
+    position: relative;
+}
+.slider-video-hataco{
+    .video-slider{
+        width: 100%;
+        height: 379px;
+    }
+    .play-video-slider{
+        position: absolute;
+        top: 0;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        &:not(.active)
+        {
+            cursor: pointer;
+        }
+        &.active{
+            display: none;
+        }
+        &::after{
+            content: url('/assets/images/ic-play.svg');
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
         }
     }
 }
