--- a/assets/scss/_menu-header.scss
+++ b/assets/scss/_menu-header.scss
@@ -92,12 +92,14 @@
     }
     .text{
       p{
+        font-family: 'SVN-Gilroy', sans-serif;
         color:$primary;
         font-weight: 600; 
         margin-bottom: 0;
         line-height: 1.4;
       }
       .tel{
+        font-family: 'SVN-Gilroy', sans-serif;
         font-size: 1.375rem;
         letter-spacing: 2.2px; 
         font-weight: 600;
@@ -105,5 +107,95 @@
         color: $red-2;
       }
     }
+  }
+}
+.header-bottom{
+  background-color: $primary;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  .main-menu{
+    width: 100%;
+    justify-content: space-between;
+    .menu-category-product{
+      margin-right: 50px;
+      width: 302px;
+      &.show{
+        .icon-arrow{
+          svg{
+            transform: rotateZ(180deg);
+          }
+        }
+      }
+      .dropdown-menu{
+        width: 310px;
+        border-radius: 0;
+        padding: 0;
+        .dropdown-item{
+          padding: 15px 20px;
+          border-top: 1px solid #ddd;
+          color: #0D6C42;
+        }
+      }
+      .btn-cat-p{
+        padding: 17px 18px;
+        color: $light;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 18px;
+        background: #8DC540; 
+        border: none;
+        .icon{
+          display: flex;
+          align-items: center;
+        }
+        span{
+          padding: 0 20px;
+        }
+        &::after{
+          border: none;
+        }
+      }
+    }
+    .menu-wrapper{
+      display: flex;
+      li{
+        a{
+          color: $light;
+          font-size: 16px;
+          font-weight: 400;
+          padding: 2px 0px 2px 20px;
+          transition: all 0.3s;
+          @include minWidth(1400px){
+            font-size: 21px;
+          }
+          &:hover{
+            color: #8dc540;
+          }
+        }
+        &:not(:last-child)
+        {
+          a{
+            border-right: 1px solid #27835A;
+            padding: 2px 20px;
+          }
+        }
+      }
+    }
+  }
+}
+.header-bottom-mobile{
+  padding: 11px 0;
+  .icon-menu-mobile{
+    cursor: pointer;
+  }
+  .btn-search-m{
+    background-color: #8DC540;
+    width: 39px;
+    height: 39px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
   }
 }
