--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -505,9 +505,15 @@ textarea {
 }
 .heading-hataco{
   h2{
-    margin-bottom: 0;
+    margin-bottom: 5px;
     @include minWidth(768px){
       margin-bottom: 16px;
+    }
+  }
+  .img{
+    margin-bottom: 10px;
+    @include minWidth(768px){
+      margin-bottom: 0px;
     }
   }
   p{
@@ -516,5 +522,27 @@ textarea {
     font-weight: 300; 
     color: $grey-light;
     margin-top: 5px;
+    line-height: 25px;
+  }
+}
+.image-cover-h{
+  position: relative;
+  height: auto;
+  overflow: hidden;
+  padding-top: 100%;
+  background-position: 50% 50%;
+  background-size: cover;
+  img{
+    right: 0;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    position: absolute;
+    -o-object-position: 50% 50%;
+    object-position: 50% 50%;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
 }
