--- a/assets/scss/_menu-header.scss
+++ b/assets/scss/_menu-header.scss
@@ -184,12 +184,51 @@
     }
   }
 }
+.content-header-bottom-mobile {
+  position: relative;
+}
 .header-bottom-mobile{
   padding: 11px 0;
+  transition: all 0.5s ease-in-out;
   .icon-menu-mobile{
     cursor: pointer;
   }
+  .logo-mobile{
+    width: 113px;
+    height: 65px;
+    transform: scale(1);
+    transition: all 0.5s ease-in-out;
+  }
+  &.active-search{
+    .btn-search-m{
+      width: 200px;
+      input{
+        width: 100%;
+        visibility: visible;
+      }
+    }
+    .logo-mobile{
+      transform: scale(0.9);
+    }
+  }
   .btn-search-m{
+    display: flex;
+    align-items: center;
+    width: 39px;
+    text-align: right;
+    input{
+      border-radius: 20px;
+      border: 1px solid #E1E1E1; 
+      height: 39px;
+      padding: 10px;
+      width: 0;
+      margin-right: 0;
+      transition: all 0.5s ease-in-out;
+      visibility: hidden;
+    }
+    button{
+      position: absolute;
+      right: 0;
     background-color: #8DC540;
     width: 39px;
     height: 39px;
@@ -197,5 +236,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 100%;
+    border: none;
+    }
   }
 }
